--- a/04follow-along/traveler.css
+++ b/04follow-along/traveler.css
@@ -10,12 +10,12 @@ header {
     padding:1rem 2vw;
 }
 header h1{
-    margin 0;
+    margin: 0;
     color:#024873;}
 header p{
-    margin  0;
+    margin:  0;
     color:#024873;
-    letter-spacing .5px;
+    letter-spacing: .5px;
 }
 /* nav stuff goe here */
 nav{
