--- a/06form/style.css
+++ b/06form/style.css
@@ -187,3 +187,45 @@ footer {
 footer a {
     color: #024873;
 }
+.myForm fieldset{
+    border: 1px solid #024873;
+    border-radius: 3px;
+    margin-bottom: 1rem;
+    }
+.myForm legend{
+    color:#024873;
+    
+}
+.myForm label{
+    margin:.5rem;
+    }
+.myForm label,myForm select, .myForm [type=text],.myForm [type=tel],.myForm textarea{
+    display:block;
+}
+.myForm[type=text],.myForm[type=tel], myForm select, myForm textarea
+{border: solid 1px #888;
+    padding: 3rem;
+    width: 25opx;
+    border-radius: .3rem;
+     font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 200;
+    
+}
+.myForm textarea {
+    height: 6rem;
+
+    
+}
+.myForm :required {
+    background-color: rgba(156,51,53,0.1);
+}
+.myForm [type=submit]{
+    background-color: #024873;
+    border:none;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    color:white;
+    margin: 1rem 0 0 1vw;
+    
+    
+}
