--- a/06form/style.css
+++ b/06form/style.css
@@ -88,7 +88,7 @@ nav a:hover {
 
 .gallery img {
     width: 300px; 
-    height: 200px; 
+    height: 300px; 
     object-fit: cover; 
     margin-bottom: 10px; 
 }
@@ -159,7 +159,7 @@ main dl dd {
 /* Address styling */
 main address {
     font-style: normal;
-    background-color: #f2b705;
+    background-color: #024873;
     padding: 0.5rem;
     width: 12.5rem;
     border: 1px solid #024873;
@@ -172,7 +172,7 @@ main a {
 }
 
 main a:hover {
-    color: rgb(239, 0, 24);
+    color:#024873;
 }
 
 /* Footer styling */
@@ -203,7 +203,7 @@ footer a {
     display:block;
 }
 .myForm[type=text],.myForm[type=tel], myForm select, myForm textarea
-{border: solid 1px #888;
+{border: solid 1px #024873;
     padding: 3rem;
     width: 25opx;
     border-radius: .3rem;
