--- a/06follow-along/delivery.css
+++ b/06follow-along/delivery.css
@@ -4,17 +4,19 @@ body {
     margin: 0;
     font-size: 16px;
 }
-/* header stuff here */
+
+/* header styles */
 header {
-    
     padding: 1rem 2vw;
 }
+
 header h1 {
     margin: 0;
     color: #9c3335;
     font-size: 2.5rem;
     font-weight: 500;
 }
+
 header p {
     margin: 0;
     color: #051522;
@@ -22,20 +24,22 @@ header p {
     letter-spacing: 2px;
 }
 
-/* navigation stuff here */
+/* navigation styles */
 nav {
     background-color: #051522;
 }
+
 nav ul {
     margin: 0;
     padding: 0 2vw;
     list-style-type: none;
     display: flex;
 }
+
 nav a {
     display: block;
     padding: .95rem 1rem .83rem 1rem;
-    font-size: .8rem;
+    font-size: 0.8rem; /* Corrected value */
     text-decoration: none;
     color: #ffffff;
     font-weight: 600;
@@ -47,12 +51,12 @@ nav .active a {
     background-color: #9c3335;
     color: #ffffff;
 }
+
 nav a:hover {
     background-color: #43a0b6;
 }
 
-
-/* main stuff here */
+/* main styles */
 main {
     padding: 1rem 2vw;
 }
@@ -60,17 +64,20 @@ main {
 main h1 {
     color: #9c3335;
     font-size: 2.5rem;
-    margin: .5rem 0 .8rem 0;
+    margin: 0.5rem 0 0.8rem 0;
 }
+
 main h2 {
     color: #5c3a2e;
-    margin-bottom: .2rem;
+    margin-bottom: 0.2rem;
 }
+
 main p {
     color: #2f3133;
-    margin: 0 0 .8rem 0;
-    line-height: 150%
+    margin: 0 0 0.8rem 0;
+    line-height: 150%;
 }
+
 main a {
     color: #9c3335;
 }
@@ -81,68 +88,79 @@ main a {
     float: right;
     margin-left: 2vw;
 }
+
 .wrapimage img {
     width: 100%;
     height: auto;
 }
+
 .wrapimage figcaption {
     text-align: center;
-    font-size: .8rem;
+    font-size: 0.8rem;
 }
 
-
-/* footer stuff here */
+/* footer styles */
 footer {
     border-top: solid #ccc 2px;
     text-align: center;
     color: #024873;
-    font-size: .7rem;
+    font-size: 0.7rem;
     padding: 1rem 0;
     clear: both;
 }
+
 footer a {
     color: #024873;
 }
-.myForm fieldset{
+
+/* form styles */
+.myForm fieldset {
     border: 1px solid #43a0b6;
     border-radius: 3px;
     margin-bottom: 1rem;
-    }
-.myForm legend{
-    color:#43a0b6;
-    
 }
-.myForm label{
-    margin:.5rem;
-    }
-.myForm label,myForm select, .myForm [type=text],.myForm [type=tel],.myForm textarea{
-    display:block;
+
+.myForm legend {
+    color: #43a0b6;
 }
-.myForm[type=text],.myForm[type=tel], myForm select, .myForm textarea
-{border: solid 1px ;
-    padding: 3rem;
-    width: 25opx;
-    border-radius: .3rem;
-     font-family: 'Montserrat Alternates', sans-serif;
+
+.myForm label {
+    margin: 0.5rem;
+}
+
+.myForm label,
+.myForm select,
+.myForm [type="text"],
+.myForm [type="tel"],
+.myForm textarea {
+    display: block;
+}
+
+.myForm [type="text"],
+.myForm [type="tel"],
+.myForm select,
+.myForm textarea {
+    border: solid 1px #888;
+    padding: 0.3rem;
+    width: 250px;
+    border-radius: 0.3rem;
+    font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 200;
-    
 }
+
 .myForm textarea {
     height: 6rem;
-
-
-    
 }
+
 .myForm :required {
-    background-color: rgba(156,51,53,0.1);
+    background-color: rgba(156, 51, 53, 0.1);
 }
-.myForm [type=submit]{
+
+.myForm [type="submit"] {
     background-color: #43a0b6;
-    border:none;
+    border: none;
     padding: 1rem 2rem;
     border-radius: 10px;
-    color:white;
+    color: white;
     margin: 1rem 0 0 1vw;
-    
-    
 }
