--- a/05images/style.css
+++ b/05images/style.css
@@ -86,6 +86,28 @@ nav a:hover {
 
 }
 
+figure.wrapped{
+    width:30%;
+    margin:0 0 0 2;
+    float:right;
+    
+}
+figure.wrapped img{
+    width:100%;
+    height:auto
+        
+    
+}
+figure.wrapped
+{
+ text-align: center;
+ font-size: .75rem;
+    
+}
+
+    
+}
+
 .gallery img {
     width: 300px; 
     height: 200px; 
@@ -159,7 +181,7 @@ main dl dd {
 /* Address styling */
 main address {
     font-style: normal;
-    background-color: #f2b705;
+    background-color: #024873;
     padding: 0.5rem;
     width: 12.5rem;
     border: 1px solid #024873;
@@ -174,20 +196,20 @@ main a {
 main a:hover {
     color: rgb(239, 0, 24);
 }
-
+figure {float:right;}
 /* Footer styling */
 footer {
     background-color: #eaeaea;
     text-align: center;
     color: #024873;
-    padding: 1rem 0;
+    padding: 1rem;
     font-size: 0.8rem;
+    float: bottom;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 footer a {
     color: #024873;
 }
-figure {float:right;}
-
-
-
