--- a/06form/style.css
+++ b/06form/style.css
@@ -285,3 +285,21 @@ footer a {
 }
 .style h1
 {color: #024873;}
+
+figure {float:right;}
+/* Footer styling */
+footer {
+    background-color: #eaeaea;
+    text-align: center;
+    color: #024873;
+    padding: 1rem;
+    font-size: 0.8rem;
+    float: bottom;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+footer a {
+    color: #024873;
+}
