--- a/06form/style.css
+++ b/06form/style.css
@@ -24,7 +24,7 @@ dl {
 }
 
 dt {
-    color: #024873;
+    color: #2f3133;
     font-weight: 700;
 }
 
@@ -86,9 +86,31 @@ nav a:hover {
 
 }
 
+figure.wrapped{
+    width:30%;
+    margin:0 0 0 2;
+    float:right;
+    
+}
+figure.wrapped img{
+    width:100%;
+    height:auto
+        
+    
+}
+figure.wrapped
+{
+ text-align: center;
+ font-size: .75rem;
+    
+}
+
+    
+}
+
 .gallery img {
     width: 300px; 
-    height: 300px; 
+    height: 200px; 
     object-fit: cover; 
     margin-bottom: 10px; 
 }
@@ -108,7 +130,7 @@ main h2 {
 }
 
 main p {
-    color: #024873;
+    color: #2f3133;
     margin: 0 0 0.3rem 0;
 }
 
@@ -172,20 +194,10 @@ main a {
 }
 
 main a:hover {
-    color:#024873;
+    color: rgb(239, 0, 24);
 }
+figure {float:right;}
 
-/* Footer styling */
-footer {
-    background-color: #eaeaea;
-    text-align: center;
-    color: #024873;
-    padding: 1rem 0;
-    font-size: 0.8rem;
-}
-
-footer a {
-    color: #024873;
 }
 .myForm fieldset{
     border: 1px solid #024873;
@@ -225,81 +237,15 @@ footer a {
     padding: 1rem 2rem;
     border-radius: 10px;
     color:white;
-    margin: 1rem 0 0 1vw;
-    
-    
-}
-/* form styles */
-.myForm fieldset {
-    border: 1px solid #024873;
-    border-radius: 3px;
-    margin-bottom: 1rem;
-}
-
-.myForm legend {
-    color: #024873;
-}
-
-.myForm label {
-    margin: 0.5rem;
-}
-
-.myForm label,
-.myForm select,
-.myForm [type="text"],
-.myForm [type="tel"],
-.myForm textarea {
-    display: block;
-}
-
-.myForm [type="text"],
-.myForm [type="phone"]
-.myForm [type="email"],
-.myForm select,
-.myForm textarea {
-    border: solid 1px #024873;
-    padding: 0.3rem;
-    width: 250px;
-    border-radius: 0.3rem;
-}
-
-.myForm textarea {
-    height: 6rem;
-}
-
-.myForm :required {
-    background-color: rgba(156, 51, 53, 0.1);
-    border: solid 1px #024873;
-    padding: 0.3rem;
-    width: 250px;
-    border-radius: 0.3rem;;
-}
-
-.myForm [type="submit"] {
-    background-color: #024873;
-    border: none;
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    color: white;
-    margin: 1rem 0 0 1vw;
-}
-.style h1
-{color: #024873;}
-
-figure {float:right;}
-/* Footer styling */
-footer {
+    margin: 1rem 0 0 1vw;}
+    footer {
     background-color: #eaeaea;
     text-align: center;
     color: #024873;
     padding: 1rem;
     font-size: 0.8rem;
     float: bottom;
-    position: absolute;
+    position: ;
     bottom: 0;
     width: 100%;
-}
-
-footer a {
-    color: #024873;
 }
