--- a/07advanced-css/style.css
+++ b/07advanced-css/style.css
@@ -1,7 +1,7 @@
-{
-*    box-sizing: border-box;
+*{
+   box-sizing: border-box;
 }
-* Navigation styles */
+/* Navigation styles */
 /* Small screens */
 
 @media only screen and (max-width: 600px) {
