--- a/05images/style.css
+++ b/05images/style.css
@@ -122,6 +122,7 @@ main {
 main h1 {
     color: #024873;
     font-size: 2rem;
+    padding: 
 }
 
 main h2 {
@@ -205,7 +206,6 @@ footer {
     padding: 1rem;
     font-size: 0.8rem;
     float: bottom;
-
     bottom: 0;
     width: 100%;
 }
