--- a/06form/style.css
+++ b/06form/style.css
@@ -1,304 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-/* Navigation styles */
-/* Small screens */
-
-@media only screen and (max-width: 600px) {
-        color: blue;  
-    }
-
-nav ul {
-        margin: 0;
-        padding: 0 2vw;
-        list-style-type: none;
-    
-    }
-
-    nav a {
-        display: block;
-        padding: .8rem;
-        text-decoration: none;
-        font-weight: 700;
-        text-transform: uppercase;
-        text-align: center;
-        border-bottom: solid 1px #aaa;
-        color: #024873;
-    }
-
-    nav.active a {
-        background-color: #black;
-        background-image: linear-gradient(top to bottom,#8b5022,#653a19); 
-        color: white;
-    }
- 
-}
-    nav a:hover{
-        color:#000;
-    }
-body {
-    font-family: 'Oswald', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 0;
-}
-
-
-/* Styling Lists */
-.circle-bullet {
-    list-style-type: circle;
-    padding-left: 20px;
-}
-
-.square-bullet {
-    list-style-type: square;
-    padding-left: 20px;
-}
-
-/* Styling Definition List */
-dl {
-    border: 1px solid #024873;
-    padding: 10px;
-}
-
-dt {
-    color: #2f3133;
-    font-weight: 700;
-}
-
-dd {
-    color: #024873;
-    font-size: 0.9rem;
-}
-
-/* Header styling */
-header {
-    background-color: #eaeaea;
-    padding: 1rem 2vw;
-}
-
-header h1 {
-    margin: 0;
-    color: #024873;
-}
-
-header p {
-    margin: 0;
-    color: #024873;
-    letter-spacing: 0.5px;
-}
-
-/* Navigation styling */
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
- width: 300px; 
-    height: 200px; 
-    object-fit: cover; 
-    margin-bottom: 10px; 
-}
-
-figure.wrapped{
-    width:20%;
-    margin:0 0 0 2;
-    float:right;
-    
-}
-figure.wrapped img{
-    width:50%;
-    height:auto
-        
-    
-}
-figure.wrapped
-{
- text-align: center;
- font-size: .75rem;
-    
-}
-
-    
-}
-
-.gallery img {
-    width: 300px; 
-    height: 200px; 
-    object-fit: cover; 
-    margin-bottom: 10px; 
-}
-/* Main content styling */
-main {
-    padding: 1rem 2vw;
-}
-
-main h1 {
-    color: #024873;
-    font-size: 2rem;
-}
-
-main h2 {
-    color: #024873;
-    margin-bottom: 0.2rem;
-}
-
-main p {
-    color: #2f3133;
-    margin: 0 0 0.3rem 0;
-}
-
-/* Lists styling */
-main ol, main ul {
-    padding: 0.5rem 3vw;
-    margin-bottom: 1rem;
-}
-
-main ul {
-    list-style-type: circle;
-}
-
-main ol {
-    list-style-type: decimal;
-    background-color: #efefef;
-}
-
-main ul, main ol {
-    border: 1px solid #ddd;
-    border-radius: 0.5rem;
-}
-
-main ul li, main ol li {
-    line-height: 125%;
-    margin-bottom: 0.5rem;
-    font-size: 0.9rem;
-}
-
-/* Definition list styling */
-main dl {
-    border: 1px solid #ddd;
-    border-radius: 0.5rem;
-    padding: 1rem;
-}
-
-main dl dt {
-    color: #b40412;
-    font-weight: 700;
-}
-
-main dl dd {
-    color: #024873;
-    font-size: 0.9rem;
-    margin-bottom: 0.5rem;
-}
-
-/* Address styling */
-main address {
-    font-style: normal;
-    background-color: #024873;
-    padding: 0.5rem;
-    width: 12.5rem;
-    border: 1px solid #024873;
-    border-radius: 0.5rem;
-}
-
-/* Links styling */
-main a {
-    color: #024873;
-}
-
-main a:hover {
-    color: rgb(239, 0, 24);
-}
-figure {float:right;}
-
-}
-.myForm fieldset{
-    border: 1px solid #024873;
-    border-radius: 3px;
-    margin-bottom: 1rem;
-    }
-.myForm legend{
-    color:#024873;
-    
-}
-
-.myForm label{
-    margin:.5rem;
-    }
-.myForm label,myForm select, .myForm [type=text],.myForm [type=tel],.myForm textarea{
-    display:block;
-}
-.myForm[type=text],.myForm[type=tel], myForm select, myForm textarea
-{border: circle 1px #024873;
-    padding: 3rem;
-    width: 25opx;
-    border-radius: .3rem;
-     font-family: "Montserrat Alternates", sans-serif;
-    font-weight: 200;
-    
-}
-.radio-left {
-    text-align: left;
-}
-.myForm textarea {
-    height: 6rem;
-
-    
-}
-.myForm :required {
-    background-color: rgba(156,51,53,0.1);
-}
-.myForm [type=submit]{
-    background-color: #024873;
-    border:none;
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    color:white;
-    margin: 1rem 0 0 1vw;}
-    footer {
-    background-color: #eaeaea;
-    text-align: center;
-    color: #024873;
-    padding: 1rem;
-    font-size: 0.8rem;
-    float: bottom;
-    position: ;
-    bottom: 0;
-    width: 100%;
-        
-}/* end of the media query*/
-/* Big screens */
-@media only screen and (min-width: 601px) {
- /* end of the media query*/   
-    nav {
-     border-top: solid 1px #E0E6E6;}   
-
-
-    nav ul {
-        margin: 0;
-        padding: 0 2vw;
-        list-style-type: none;
-     display: flex;
-    }
-
-    nav a {
-        display: block;
-        padding: .8rem;
-        text-decoration: none;
-        font-weight: 700;
-        text-transform: uppercase;
-        text-align: center;
-        border-bottom: solid 1px #aaa;
-        color: #;
-    }
-
-    nav.active a {
-        background-color: #;
-        color: white;
-    }
-    nav a:hover{
-        color:#000;
-    }
 body {
     font-family: 'Oswald', sans-serif;
     font-size: 16px;
@@ -388,13 +87,13 @@ nav a:hover {
 }
 
 figure.wrapped{
-    width:20%;
+    width:30%;
     margin:0 0 0 2;
     float:right;
     
 }
 figure.wrapped img{
-    width:50%;
+    width:100%;
     height:auto
         
     
@@ -423,6 +122,7 @@ main {
 main h1 {
     color: #024873;
     font-size: 2rem;
+    padding: 
 }
 
 main h2 {
@@ -499,59 +199,57 @@ main a:hover {
 }
 figure {float:right;}
 
-}
+
 .myForm fieldset{
     border: 1px solid #024873;
     border-radius: 3px;
     margin-bottom: 1rem;
-    }
-.myForm legend{
-    color:#024873;
-    
 }
 
-.myForm label{
-    margin:.5rem;
-    }
-.myForm label,myForm select, .myForm [type=text],.myForm [type=tel],.myForm textarea{
+.myForm legend {
+    color:#024873;
+    font-size: .8rem;
+
+}
+.myForm label {
+    margin: .5rem;
+}
+
+.myForm label, .myForm select, .myForm [type=text],.myForm [type=tel], .myForm textarea {
     display:block;
 }
-.myForm[type=text],.myForm[type=tel], myForm select, myForm textarea
-{border: circle 1px #024873;
-    padding: 3rem;
-    width: 25opx;
-    border-radius: .3rem;
-     font-family: "Montserrat Alternates", sans-serif;
-    font-weight: 200;
-    
-}
-.radio-left {
-    text-align: left;
-}
+
+.myForm [type=text], .myForm select, .myForm [type=tel], .myForm textarea{
+    border: solid 1px #888;
+    padding:  .3rem;
+    width: 250 px;
+    border-radius:  .3rem;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    }
 .myForm textarea {
     height: 6rem;
+}
+.myForm :required{
+    background-color:rgba(156,51,53,0.1);
+}
+.myForm [type=submit]
+{background-color: #024873;
+border: none;
+padding: 1rem,2rem;
+border-radius: 10px;
+color:white;
+margin:1rem 0 0 1vw;}
 
-    
-}
-.myForm :required {
-    background-color: rgba(156,51,53,0.1);
-}
-.myForm [type=submit]{
-    background-color: #024873;
-    border:none;
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    color:white;
-    margin: 1rem 0 0 1vw;}
-    
+
 /* Footer styling */
 footer {
     background-color: #eaeaea;
     text-align: center;
     color: #024873;
-    padding: 1rem;
+    padding: 0.1rem;
     font-size: 0.8rem;
-    position: fixed;
+    float: bottom;
     bottom: 0;
     width: 100%;
 }
