--- a/07follow-along/styles.css
+++ b/07follow-along/styles.css
@@ -1,7 +1,7 @@
-/* Prevent problems with different browsers */
-* {
-    box-sizing: border-box;
-}
+/*prevent problems with different browser*/
+* {box-sizing: border-box;}
+
+
 
 body {
     font-family: 'Lato', sans-serif;
@@ -9,99 +9,87 @@ body {
     margin: 0;
     font-size: 16px;
 }
-
-/* Header styles */
+/* header stuff here */
 header {
     padding: 1rem 2vw;
-    display: flex;
+    display:flex;
     align-items: flex-end;
 }
-
+header div{
+    padding-left: 1vw;
+}
 header h1 {
     margin: 0;
     color: #895772;
     font-size: 2.5rem;
     font-weight: 700;
 }
-
-header div {
-    padding-left: 1vw;
-}
-
 header p {
     margin: 0;
     color: #895772;
     font-size: 1.22rem;
     letter-spacing: 2px;
 }
-
-/* Navigation styles */
-/* Small screens */
-
-@media only screen and (max-width: 600px) {
-
-
-nav ul {
-        margin: 0;
-        padding: 0 2vw;
-        list-style-type: none;
-    
-    }
-
-    nav a {
-        display: block;
-        padding: .8rem;
-        text-decoration: none;
-        font-weight: 700;
-        text-transform: uppercase;
-        text-align: center;
-        border-bottom: solid 1px #aaa;
-        color: #8c501b;
-    }
-
-    nav.active a {
-        background-color: #8b5022;
-        background-image: linear-gradient(top to bottom,#8b5022,#653a19); 
-        color: white;
-    }
- 
-}/* end of the media query*/
-/* Big screens */
-@media only screen and (min-width: 601px) {
- /* end of the media query*/   
-    nav {
-     border-top: solid 1px #E0E6E6;}   
-
-
+/* Small screen stuff here */
+@media only screen and (max-width:800px){
     nav ul {
         margin: 0;
         padding: 0 2vw;
-        list-style-type: none;
-     display: flex;
+        list-style-type:none;
     }
-
-    nav a {
-        display: block;
+    nav a{ 
+    display: block;
         padding: .8rem;
         text-decoration: none;
         font-weight: 700;
-        text-transform: uppercase;
+        text-transform: capitalize;
         text-align: center;
         border-bottom: solid 1px #aaa;
         color: #8c501b;
     }
-
-    nav.active a {
+    nav .active a{
         background-color: #8c501b;
+        background-image: linear-gradient(to right,#8c501b,#653a19);
         color: white;
     }
-    nav a:hover{
-        color:#000;
-    }
+}/*end of the media query*/
+/*BIG screens*/
+@media only screen and (min-width:801px){
+    
+    nav {
+    border-top: solid 1px #E0E6E6;
+    
+}
+nav ul {
+    margin: 0;
+    padding: 0 2vw;
+    list-style-type: none;
+    display: flex;
+}
+nav a {
+    display: block;
+    padding: 1.2rem 1rem .3rem 1rem;
+    font-size: 1rem;
+    text-decoration: none;
+    color: #8C501B;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    border-bottom: solid 2px #fff;
+}
 
-   
+nav .active a {
+    border-bottom: solid 2px #8b5022;
+}
+nav a:hover {
+    color: #000;
+}
+}/*end of the media query*/
 
-}/* Main styles */
+
+
+
+/* main stuff here */
 main {
     padding: 1rem 2vw;
 }
@@ -109,77 +97,72 @@ main {
 main h1 {
     color: #8b5022;
     font-size: 2.5rem;
-    margin: 0.5rem 0 0.8rem 0;
+    margin: .5rem 0 .8rem 0;
     font-weight: 200;
 }
-
 main h2 {
     color: #8b5022;
-    margin-bottom: 0.2rem;
+    margin-bottom: .2rem;
 }
-
 main p {
     color: #333;
-    margin: 0 0 0.8rem 0;
+    margin: 0 0 .8rem 0;
     line-height: 150%;
     font-size: 1.2rem;
 }
-
 main a {
     color: #9c3335;
+}
+
+.angeloGallery {
+    display: flex;
+    flex-wrap: wrap;
+} 
+.angeloGallery section {
+    flex-basis: 50%;
+    margin: 1rem 0;
+    
 }
 
 .angelohero{
     width:100%;
     margin:0;
-    
 }
-
-.angelohero img {
+.angelohero img{
     width:100%;
-    height: auto;
+    height:auto;
 }
-
-
-.angeloGallery {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.angeloGallery section {
-    flex-basis: 50%;
-    margin: 1rem 0;
-}
-
 .angeloGallery span {
     display: block;
-    text-align: center;
+    text-align: center; 
     font-weight: 700;
     color: #895772;
 }
-
-.angeloGallery img:hover {
+.angeloGallery img {
     width: 98%;
     height: auto;
+    
+}
+
+.angeloGallery img:hover{
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
 
-/* Footer styles */
+
+/* footer stuff here */
 footer {
     border-top: solid #895772 1px;
     text-align: center;
     color: #8b5022;
-    font-size: 0.8rem;
+    font-size: .8rem;
     padding: 1rem 0;
     clear: both;
 }
-
 footer a {
     color: #8b5022;
 }
 
-/* Container styles */
-header, nav, main, footer {
+header,nav,main,footer{
     max-width: 64rem;
     margin: 0 auto;
 }
