--- a/06form/style.css
+++ b/06form/style.css
@@ -205,7 +205,9 @@ main a:hover {
 .myForm [type=submit]
 {background-color: #024873;
 border: none;
-padding: 1rem,2rem;
+height: 44px;
+padding: 0.875rem,2rem;
+line-height: normal;    
 border-radius: 10px;
 color:white;
 margin:1rem 0 0 1vw;}
