--- a/06form/style.css
+++ b/06form/style.css
@@ -222,7 +222,7 @@ footer {
     font-size: 0.8rem;
     bottom: 0;
     width: 100%;
-    position: fixed; 
+    position: bottom; 
     bottom: 0;
 }
 
