--- a/08media/style.css
+++ b/08media/style.css
@@ -223,7 +223,7 @@ footer {
     font-size: 0.8rem;
     bottom: 0;
     width: 100%;
-    position: fixed; 
+    position: bottom; 
     bottom: 0;
 }
 
